--- a/sample/src/main/res/layout/activity_sample.xml
+++ b/sample/src/main/res/layout/activity_sample.xml
@@ -27,8 +27,7 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
                 android:minHeight="?attr/actionBarSize"
-                android:theme="?attr/actionBarTheme"
-                android:fitsSystemWindows="true"/>
+                android:theme="?attr/actionBarTheme" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragmentContainerView22"
